force-app/main/default/objects/JT_SystemSettings__mdt/JT_SystemSettings__mdt.object-meta.xml
<CustomObject>
    <description>System-level configuration settings for JT Dynamic Queries framework. Protected metadata type to prevent unauthorized modifications.</description>
    <label>JT System Settings</label>
    <pluralLabel>JT System Settings</pluralLabel>
</CustomObject>