force-app/main/default/objects/JT_SystemSettings__mdt/fields/JT_ApexClassQueryFilter__c.field-meta.xml
<CustomField>
    <fullName>JT_ApexClassQueryFilter__c</fullName>
    <description>WHERE clause filter for ApexClass queries (e.g., NamespacePrefix = NULL AND Name != &apos;JT_UsageFinder&apos;)</description>
    <inlineHelpText>WHERE clause without the WHERE keyword. Used for system-level ApexClass queries.</inlineHelpText>
    <label>Apex Class Query Filter</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>