force-app/main/default/objects/JT_SystemSettings__mdt/fields/JT_ApiVersion__c.field-meta.xml
<CustomField>
    <fullName>JT_ApiVersion__c</fullName>
    <description>Salesforce API version to use for Tooling API calls (e.g., v65.0)</description>
    <inlineHelpText>API version format: vXX.X (e.g., v65.0)</inlineHelpText>
    <label>API Version</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>