force-app/main/default/objects/JT_SystemSettings__mdt/fields/JT_FlowQuery__c.field-meta.xml
<CustomField>
    <fullName>JT_FlowQuery__c</fullName>
    <description
  >SOQL query for Tooling API to retrieve Flow metadata (e.g., SELECT Id, MasterLabel, Metadata, Status FROM Flow)</description>
    <inlineHelpText>SOQL query for Tooling API Flow retrieval</inlineHelpText>
    <label>Flow Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>