force-app/main/default/objects/JT_SystemSettings__mdt/fields/JT_ToolingApiPath__c.field-meta.xml
<CustomField>
    <fullName>JT_ToolingApiPath__c</fullName>
    <description>Path for Tooling API endpoints (e.g., /services/data/v65.0/tooling/query/)</description>
    <inlineHelpText>Tooling API path relative to Named Credential endpoint</inlineHelpText>
    <label>Tooling API Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>