force-app/main/default/objects/JT_SystemSettings__mdt/fields/JT_ToolingApiTestQuery__c.field-meta.xml
<CustomField>
    <fullName>JT_ToolingApiTestQuery__c</fullName>
    <description>Simple SOQL query for Tooling API availability check (e.g., SELECT Id FROM ApexClass LIMIT 1)</description>
    <inlineHelpText>Simple query to test Tooling API availability</inlineHelpText>
    <label>Tooling API Test Query</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>